welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:5: error: type mismatch;
 found   : Unit
 required: Boolean
		f=true
                 ^in3050:6: error: type mismatch;
 found   : Unit
 required: Boolean
	}else {f=false}
                ^in3050:9: error: type mismatch;
 found   : Unit
 required: Boolean
		f=true
                 ^in3050:11: error: type mismatch;
 found   : Unit
 required: Boolean
		f=false
                 ^in3050:13: error: type mismatch;
 found   : Unit
 required: Boolean
}else{f=false}
       ^